--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,25 @@
 version: "3.8"
 
 services:
+  # mongodb:
+  #   image: 'bitnami/mongodb:6.0'
+  #   # group_add:
+  #   #  - 1001:1001
+  #   user: "1001:1001"
+  #   environment:
+  #     - MONGODB_USERNAME=my_user
+  #     - MONGODB_PASSWORD=password123
+  #     - MONGODB_REPLICA_SET_MODE=primary
+  #     - MONGODB_ROOT_PASSWORD=password123
+  #     - MONGODB_DATABASE=my_database
+  #     - MONGODB_REPLICA_SET_KEY=replicasetkey123
+  #   ports:
+  #     - '27017:27017'
+  #   volumes:
+  #     - './mongodb_data:/bitnami/mongodb'
   mongodb:
-    image: 'bitnami/mongodb:latest'
-    # group_add:
-    #  - 1001:1001
-    user: "1001:1001"
-    environment:
-      - MONGODB_USERNAME=my_user
-      - MONGODB_PASSWORD=password123
-      - MONGODB_REPLICA_SET_MODE=primary
-      - MONGODB_ROOT_PASSWORD=password123
-      - MONGODB_DATABASE=my_database
-      - MONGODB_REPLICA_SET_KEY=replicasetkey123
+    image: docker.io/bitnami/mongodb:6.0
     ports:
-      - '27017:27017'
+      - "27017:27017"
     volumes:
       - './mongodb_data:/bitnami/mongodb'
-
-volumes:
-  mongodb_data:
-    driver: local
