--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,10 +9,11 @@ services:
     environment:
       - MONGODB_USERNAME=my_user
       - MONGODB_PASSWORD=password123
-      - MONGODB_REPLICA_SET_MODE=primary
-      - MONGODB_ROOT_PASSWORD=password123
+      # - MONGODB_REPLICA_SET_MODE=primary
+      # - MONGODB_ROOT_PASSWORD=password123
       - MONGODB_DATABASE=my_database
-      - MONGODB_REPLICA_SET_KEY=replicasetkey123
+      # - MONGODB_REPLICA_SET_KEY=replicasetkey123
+      # - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - '27017:27017'
     volumes:
