--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       # - MONGODB_REPLICA_SET_MODE=primary
       # - MONGODB_ROOT_PASSWORD=password123
       - MONGODB_DATABASE=my_database
+      - MONGODB_ROOT_PASSWORD=password123
       # - MONGODB_REPLICA_SET_KEY=replicasetkey123
       # - ALLOW_EMPTY_PASSWORD=yes
     ports:
