--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,9 @@ services:
       # - MONGODB_REPLICA_SET_MODE=primary
       # - MONGODB_ROOT_PASSWORD=password123
       - MONGODB_DATABASE=my_database
+      - MONGODB_ADVERTISED_HOSTNAME=mongodb-primary
       - MONGODB_ROOT_PASSWORD=password123
+      - MONGODB_INITIAL_PRIMARY_PORT_NUMBER=27017
       # - MONGODB_REPLICA_SET_KEY=replicasetkey123
       # - ALLOW_EMPTY_PASSWORD=yes
     ports:
